--- a/02-coding-interview/frontend/package.json
+++ b/02-coding-interview/frontend/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.5.0",
     "axios": "^1.6.0",
+    "pyodide": "^0.24.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.17.0",
